--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <table style="width:100%;max-width:900px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody><tr style="padding:0px">
       <td style="padding:0px">
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -33,16 +33,20 @@
               <h1>
                 Cédric Manouan
               </h1>
+              <hr>
 
               <p>
-                Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;
-.                <br>
+                Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
                 I currently serve as a Postgraduate Research Assistant within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">School of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
                 Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I am actively engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
               </p>
               <p>
-                I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="http://svl.stanford.edu/">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
+                I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="http://svl.stanford.edu/">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
                 Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr Franklin Kouassi</a>.
+              </p>
+
+              <p>
+                When I am not writing computer programs, you can find me arguing about NBA players (more about <a href="https://www.nba.com/player/1641705/victor-wembanyama">Victor Wembanyama</a> now), and Ethics in AI. I also enjoy playing basketball and take random (night) walks.
               </p>
 
               <p style="text-align:center">
@@ -54,7 +58,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="../images/cmanouan_1.jpg">
+              <img style="width:80%;max-width:100%" alt="profile photo" src="{{site.avatar}}">
             </td>
           </tr>
         </tbody></table>
@@ -63,6 +67,7 @@
           <tbody><tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research Interests & Deep Learning Engineering</h2>
+              <hr>
               <p>
                 I have a broad interest in developing autonomous agents that can engage with humans using natural language.<br>
                 My research activities, to date, have revolved around the implementation of ML/DL models for various applications, such as speech recognition, text and image classification, and machine learning for Earth Observation (ML4EO). You can find some of my work in the following sections.<br><br>
@@ -81,6 +86,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
+              <hr>
               <p>A summary of the research project I was involved in.
               </p>
             </td>
@@ -92,8 +98,8 @@
           {% for cat in post.categories %}
           {% if cat == 'research' %}
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            <td class="zoom-container" style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img class="zoom-image" src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
@@ -104,25 +110,25 @@
               <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
               <br>
               {% if post.report %}
-              <a href="{{post.report}}">report</a> /
+              <a href="{{post.report}}">report</a> |
               {% endif %}              
               {% if post.arxiv %}
-              <a href="{{post.arxiv}}">arxiv</a> /
+              <a href="{{post.arxiv}}">arxiv</a> |
               {% endif %}
               {% if post.video %}
-              <a href="{{post.video}}">video</a> /
+              <a href="{{post.video}}">video</a> |
               {% endif %}
               {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
+              <a href="{{post.poster}}">poster</a> |
               {% endif %}
               {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
+              <a href="{{post.slides}}">slides</a> |
               {% endif %}
               {% if post.website %}
-              <a href="{{post.website}}">website</a> /
+              <a href="{{post.website}}">website</a> |
               {% endif %}
               {% if post.youtube %}
-              <a href="{{post.youtube}}">youtube</a> /
+              <a href="{{post.youtube}}">youtube</a> |
               {% endif %}
               {% if post.code %}
               <a href="{{post.code}}">code</a>
@@ -141,6 +147,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Selected Course Projects</h2>
+              <hr>
               <p>Some of the projects that I completed during my time at the University.              
               </p>
             </td>
@@ -152,8 +159,8 @@
           {% for cat in post.categories %}
           {% if cat == 'U' %}
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            <td class="zoom-container" style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img class="zoom-image" src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
@@ -164,16 +171,16 @@
               <em>{{post.venue}}</em>, {{post.course}}, {{ post.date | date: "%Y" }}
               <br>
               {% if post.report %}
-              <a href="{{post.report}}">report</a> /
+              <a href="{{post.report}}">report</a> |
               {% endif %}              
               {% if post.video %}
-              <a href="{{post.video}}">video</a> /
+              <a href="{{post.video}}">video</a> |
               {% endif %}
               {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
+              <a href="{{post.poster}}">poster</a> |
               {% endif %}
               {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
+              <a href="{{post.slides}}">slides</a> |
               {% endif %}
               {% if post.code %}
               <a href="{{post.code}}">code</a>
@@ -191,6 +198,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Other Projects</h2>
+              <hr>
               <p>These are essentially software engineering and data science projects in which I have actively participated over the past few years.              
               </p>
             </td>
@@ -202,8 +210,8 @@
           {% for cat in post.categories %}
           {% if cat == 'other' %}
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+            <td class="zoom-container" style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <img class="zoom-image" src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
@@ -214,22 +222,22 @@
               <em>{{post.venue}}</em>, {{post.subtitle}}, {{ post.date | date: "%Y" }}
               <br>
               {% if post.report %}
-              <a href="{{post.report}}">report</a> /
+              <a href="{{post.report}}">report</a> |
               {% endif %}              
               {% if post.video %}
-              <a href="{{post.video}}">video</a> /
+              <a href="{{post.video}}">video</a> |
               {% endif %}
               {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
+              <a href="{{post.poster}}">poster</a> |
               {% endif %}
               {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
+              <a href="{{post.slides}}">slides</a> |
               {% endif %}
               {% if post.website %}
-              <a href="{{post.website}}">website</a> /
+              <a href="{{post.website}}">website</a> |
               {% endif %}
               {% if post.youtube %}
-              <a href="{{post.youtube}}">youtube</a> /
+              <a href="{{post.youtube}}">youtube</a> |
               {% endif %}
               {% if post.code %}
               <a href="{{post.code}}">code</a>
@@ -247,8 +255,8 @@
           <tr>
             <td style="padding:0px">
               <br>
-              <p style="text-align:center;font-size:small;">
-                Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
+              <p style="text-align:center;">
+                Design and <a href="https://github.com/dric2018/dric2018.github.io">source code</a> from <a href="https://jonbarron.info">Jon Barron's website</a>
               </p>
             </td>
           </tr>
