--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,36 +30,45 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tbody><tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
-              <h1>
-                Cédric Manouan
-              </h1>
-              <hr>
+              <div class="profile-container">
+                <div class="profile-image">
+                  <!-- <td style="padding:2.5%;width:40%;max-width:40%"> -->
+                    <img alt="profile photo" src="{{site.avatar}}">
+                  <!-- </td> -->
+                </div>
+                <div class="profile-content">
+                  <h1>
+                    Cédric Manouan
+                  </h1>
+                  <hr>
+    
+                  <p>
+                    Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
+                    I previously served as a Research Assisociate within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">School of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
+                    Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I am engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
+                  </p>
+                  <p>
+                    I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="http://svl.stanford.edu/">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
+                    Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr Franklin Kouassi</a>.
+                  </p>
+    
+                  <p>
+                    When I am not writing computer programs, you can find me arguing about NBA players (more about <a href="https://www.nba.com/player/1641705/victor-wembanyama">Victor Wembanyama</a> now), and Ethics in AI. I also enjoy playing basketball and take random (night) walks.
+                  </p>
+    
+                  <p style="text-align:center">
+                    <a target="_blank" href="mailto:cmanouan@alumni.cmu.edu"> Email</a> &nbsp;/&nbsp;
+                    <a href="https://github.com/dric2018">GitHub</a> &nbsp;/&nbsp;
+                    <a href="https://drive.google.com/file/d/19fEKqHaAR6wWc8vqUZJwp0_0-GqC2x1X/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+                    <a href="https://twitter.com/cmDrStrange">Twitter</a> &nbsp;/&nbsp;
+                    <a href="https://www.linkedin.com/in/cpem"> LinkedIn </a>
+                    <!-- <a href="{{ site.baseurl }}/me"> Gallery </a> -->
+                  </p>
+                </div>
+              </div>
 
-              <p>
-                Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
-                I currently serve as a Postgraduate Research Assistant within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">School of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
-                Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I am actively engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
-              </p>
-              <p>
-                I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="http://svl.stanford.edu/">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
-                Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr Franklin Kouassi</a>.
-              </p>
-
-              <p>
-                When I am not writing computer programs, you can find me arguing about NBA players (more about <a href="https://www.nba.com/player/1641705/victor-wembanyama">Victor Wembanyama</a> now), and Ethics in AI. I also enjoy playing basketball and take random (night) walks.
-              </p>
-
-              <p style="text-align:center">
-                <a target="_blank" href="mailto:manouancedric@gmail.com"> Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/dric2018">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/1WxSyXlYGnP2diUPwIvP91J9zpty4JfpJ/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
-                <a href="https://twitter.com/cmDrStrange">Twitter</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/cpem"> LinkedIn </a>
-              </p>
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:80%;max-width:100%" alt="profile photo" src="{{site.avatar}}">
-            </td>
+
           </tr>
         </tbody></table>
 
@@ -68,14 +77,15 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research Interests & Deep Learning Engineering</h2>
               <hr>
-              <p>
-                I have a broad interest in developing autonomous agents that can engage with humans using natural language.<br>
+              <p class="profile-content">
+                I have a broad interest in leveraging NLP techniques to address communication barriers and access to high-quality knowledge in the context of African languages.<br>
+                I am also interested in developing autonomous agents that can engage with humans using natural language.<br>
                 My research activities, to date, have revolved around the implementation of ML/DL models for various applications, such as speech recognition, text and image classification, and machine learning for Earth Observation (ML4EO). You can find some of my work in the following sections.<br><br>
                 
-                My current job involves exploring the utilization of Vision-Language-Action Modeling for semantically modulating Joint Episodic-Procedural Associative Working Memories. My primary objective is to create a Behavioral Episodes model, which will be integrated into the <a href="https://www.uni-bielefeld.de/einrichtungen/zif/groups/previous/archive-rg/2019cognitive-behavior/">Situation Model Framework</a>.<br><br>
+                My most recent assignments involved exploring the utilization of Vision-Language-Action (VLA) modeling for semantically modulating Joint Episodic-Procedural Associative Working Memories. My primary objective was to create a Behavioral Episode model referred to as S-JEP, implementing the working memory which is at the core of the <a href="https://www.uni-bielefeld.de/einrichtungen/zif/groups/previous/archive-rg/2019cognitive-behavior/">Situation Model Framework</a>.<br><br>
 
-                Recently, I have been delving into exploring the concepts of "System 2 Deep Learning," and "Autonomous Machine Intelligence" inspired by ideas presented by Prof Yann Lecun (see the <a href="https://openreview.net/pdf?id=BZ5a1r-kVsf">corresponding paper</a> and his talk <a href="https://www.youtube.com/watch?v=OKkEdTchsiE&ab_channel=InstitutdesHautes%C3%89tudesScientifiques%28IH%C3%89S%29">here</a>) and Prof Yoshua Bengio (here you can watch one of his talks <a href="https://www.youtube.com/watch?v=T3sxeTgT4qc&t=754s&ab_channel=LexClips">here</a>).
-                It's worth noting that both of these ideas expand upon the concept of the Dual-system theory, which was popularized by Professor Daniel Kahneman in Thinking Fast and Slow (<a href="https://www.youtube.com/watch?v=gmjgZF2HEwI&t=3936s&ab_channel=LongNowFoundation">Talk</a>/<a href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555">Book</a>).<br>
+                Recently, I have been delving into exploring the concepts of "System 2 Deep Learning," and "Autonomous Machine Intelligence" inspired by ideas presented by Prof. Yann Lecun (see the <a href="https://openreview.net/pdf?id=BZ5a1r-kVsf">corresponding paper</a> and his talk <a href="https://www.youtube.com/watch?v=OKkEdTchsiE&ab_channel=InstitutdesHautes%C3%89tudesScientifiques%28IH%C3%89S%29">here</a>) and Prof. Yoshua Bengio (you can watch one of his talks on the topic <a href="https://www.youtube.com/watch?v=T3sxeTgT4qc&t=754s&ab_channel=LexClips">here</a>).
+                It's worth noting that both of these ideas expand upon the concept of the Dual-system theory, which was popularized by  Daniel Kahneman in Thinking Fast and Slow (<a href="https://www.youtube.com/watch?v=gmjgZF2HEwI&t=3936s&ab_channel=LongNowFoundation">Talk</a>/<a href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555">Book</a>).<br>
                 My hypothesis in this regard is being complied as part of an ongoing independent research titled <a href="#">Language is Almost All you Need (preprint coming soon)</a>.
               </p>
             </td>
