--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,9 @@
                     I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="http://svl.stanford.edu/">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
                     Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr Franklin Kouassi</a>.
                   </p>
+                  <p>
+                    Among other things, I am particularly interested in AI Public Policy, especially in the African context. 
+                  </p>
     
                   <p>
                     When I am not writing computer programs, you can find me arguing about NBA players (more about <a href="https://www.nba.com/player/1641705/victor-wembanyama">Victor Wembanyama</a> now), and Ethics in AI. I also enjoy playing basketball and take random (night) walks.
@@ -59,7 +62,7 @@
                   <p style="text-align:center">
                     <a target="_blank" href="mailto:cmanouan@alumni.cmu.edu"> Email</a> &nbsp;/&nbsp;
                     <a href="https://github.com/dric2018">GitHub</a> &nbsp;/&nbsp;
-                    <a href="https://drive.google.com/file/d/19fEKqHaAR6wWc8vqUZJwp0_0-GqC2x1X/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+                    <a href="https://drive.google.com/file/d/1Wp5_aFiaC2J2yclBLADAX7VSoYCGuy2c/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
                     <a href="https://twitter.com/cmDrStrange">Twitter</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/cpem"> LinkedIn </a>
                     <!-- <a href="{{ site.baseurl }}/me"> Gallery </a> -->
@@ -86,7 +89,16 @@
 
                 Recently, I have been delving into exploring the concepts of "System 2 Deep Learning," and "Autonomous Machine Intelligence" inspired by ideas presented by Prof. Yann Lecun (see the <a href="https://openreview.net/pdf?id=BZ5a1r-kVsf">corresponding paper</a> and his talk <a href="https://www.youtube.com/watch?v=OKkEdTchsiE&ab_channel=InstitutdesHautes%C3%89tudesScientifiques%28IH%C3%89S%29">here</a>) and Prof. Yoshua Bengio (you can watch one of his talks on the topic <a href="https://www.youtube.com/watch?v=T3sxeTgT4qc&t=754s&ab_channel=LexClips">here</a>).
                 It's worth noting that both of these ideas expand upon the concept of the Dual-system theory, which was popularized by  Daniel Kahneman in Thinking Fast and Slow (<a href="https://www.youtube.com/watch?v=gmjgZF2HEwI&t=3936s&ab_channel=LongNowFoundation">Talk</a>/<a href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555">Book</a>).<br>
-                My hypothesis in this regard is being complied as part of an ongoing independent research titled <a href="#">Language is Almost All you Need (preprint coming soon)</a>.
+                My hypothesis in this regard is being complied as part of an ongoing independent research titled <a href="#">Language is Almost All you Need (preprint coming soon)</a>.<br><br>
+
+                In the context of African AI public policy, I am keenly interested in examining the performance of our countries across five (5) key axes:
+                <ol>
+                  <li>Algorithms (ML/DL) </li>
+                  <li>Data (Text, Images, Speech, etc.)</li>
+                  <li>Compute (Supercomputing power...GPUs essentially)</li>
+                  <li>Workforce (AI specialists)</li>
+                  <li>Regulations (Safety, Ethics, Security & data privacy).</li>
+                </ol>
               </p>
             </td>
           </tr>
@@ -160,7 +172,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Selected Course Projects</h2>
+              <h2>Selected Projects</h2>
               <hr>
               <p>Some of the projects that I completed during my time at the University.              
               </p>
