Updated AI public policy desc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,8 +95,8 @@
                 <ol>
                   <li>Algorithms (ML/DL) </li>
                   <li>Data (Text, Images, Speech, etc.)</li>
-                  <li>Compute (Supercomputing power...GPUs essentially)</li>
-                  <li>Workforce (AI specialists)</li>
+                  <li>Compute infrastructures (Effective supercomputing power...GPUs clusters essentially)</li>
+                  <li>Workforce an Key players/Contributors (AI specialists; Disseminetion levels)</li>
                   <li>Regulations (Safety, Ethics, Security & data privacy).</li>
                 </ol>
               </p>
