Updated css to center profile pic on cellphone

--- a/style.scss
+++ b/style.scss
@@ -132,8 +132,8 @@ span.highlight {
     order: -1; /* Move the image to the top */
     // margin-bottom: 20px; /* Add some spacing between image and text */
     padding:2.5%;
-    width:40%;
-    max-width:40%
+    width: 100%;
+    max-width: 100%;
   }
 
   .profile-image img {
