--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
                   <p>
                     Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
                     I previously served as a Research Assisociate within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">School of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
-                    Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I am engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
+                    Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I was engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
                   </p>
                   <p>
                     I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="https://www.africa.engineering.cmu.edu/about/contact/directory/bios/ramakrishnan-bhiksha-raj.html">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
@@ -56,7 +56,7 @@
                   </p>
     
                   <p>
-                    When I am not writing computer programs, you can find me arguing about NBA players (more about <a href="https://www.nba.com/player/1641705/victor-wembanyama">Victor Wembanyama</a> now), and Ethics in AI. I also enjoy playing basketball and take random (night) walks.
+                    When I am not writing computer programs, you can find me arguing about NBA players (more about <a href="https://www.nba.com/player/1641705/victor-wembanyama">Victor Wembanyama</a> these days), and Ethics in AI. I also enjoy playing basketball and take random (night) walks.
                   </p>
     
                   <p style="text-align:center">
@@ -95,8 +95,8 @@
                 <ol>
                   <li>Algorithms (ML/DL) </li>
                   <li>Data (Text, Images, Speech, etc.)</li>
-                  <li>Compute infrastructures (Effective supercomputing power...GPUs clusters essentially)</li>
-                  <li>Workforce an Key players/Contributors (AI specialists; Disseminetion levels)</li>
+                  <li>Compute infrastructures (Effective supercomputing power...compute (GPU) clusters essentially)</li>
+                  <li>Workforce and Key Players/Contributors (AI specialists; Disseminetion levels)</li>
                   <li>Regulations (Safety, Ethics, Security & data privacy).</li>
                 </ol>
               </p>
