Updated profile desc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                     Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr Franklin Kouassi</a>.
                   </p>
                   <p>
-                    Among other things, I am particularly interested in AI Public Policy, especially in the African context. 
+                    Among other things, I am particularly interested in AI Policy, especially in the African context. 
                   </p>
     
                   <p>
@@ -91,7 +91,7 @@
                 It's worth noting that both of these ideas expand upon the concept of the Dual-system theory, which was popularized by  Daniel Kahneman in Thinking Fast and Slow (<a href="https://www.youtube.com/watch?v=gmjgZF2HEwI&t=3936s&ab_channel=LongNowFoundation">Talk</a>/<a href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555">Book</a>).<br>
                 My hypothesis in this regard is being complied as part of an ongoing independent research titled <a href="#">Language is Almost All you Need (preprint coming soon)</a>.<br><br>
 
-                In the context of African AI public policy, I am keenly interested in examining the performance of our countries across five (5) key axes:
+                In the context of African AI policy, I am keenly interested in examining the performance of our countries across five (5) key axes:
                 <ol>
                   <li>Algorithms (ML/DL) </li>
                   <li>Data (Text, Images, Speech, etc.)</li>
