--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
     
                   <p>
                     Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
-                    I previously served as a Research Assisociate within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">School of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
+                    I previously served as a Research Assisociate within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">College of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
                     Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I was engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
                   </p>
                   <p>
