updated LMTI desc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,11 @@
                   <p>
                     Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
                     I previously served as a Research Assisociate within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/">College of Engineering</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
-                    Under the supervision of Professor <a href="http://vernon.eu/personal.htm">David Vernon</a>, I was engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
+                    Under the supervision of Prof. <a href="http://vernon.eu/personal.htm">David Vernon</a>, I was engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
                   </p>
                   <p>
-                    I have an MSc. in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course ) and a teaching assistant for <a href="https://www.africa.engineering.cmu.edu/about/contact/directory/bios/ramakrishnan-bhiksha-raj.html">Prof Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
-                    Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr Franklin Kouassi</a>.
+                    I hold an Master's degree in Information Technology (Applied Machine Learning) from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was fortunate to work as a research assistant for <a href="https://africa.engineering.cmu.edu/about/contact/directory/bios/busogi-moise.html"> Dr. Moise Busogi</a> (also a teaching assistant for his <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AB.html">04-800 AB ML4EO</a> course) and a teaching assistant for <a href="https://www.africa.engineering.cmu.edu/about/contact/directory/bios/ramakrishnan-bhiksha-raj.html">Prof. Bhiksha Raj</a> (<a href="https://deeplearning.cs.cmu.edu/F22/index.html">11-785 Introduction to Deep Learning</a>) in Fall 2022 &amp; Spring 2023. <br>
+                    Prior to joining CMU, I completed my BSc. in Systems, Computer Networks and Telecommunications (SRIT) at <a href="https://esatic.ci/">ESATIC</a>, where I worked in the <a href="https://lastic.esatic.ci/teams/cid.php">Innovation and Development Unit (CID)</a> reporting to <a href="https://www.linkedin.com/in/ghislain-pandry-49b863108/">Dr. Ghislain Pandry</a> and <a href="https://www.linkedin.com/in/franklin-kouassi-00358113/?originalSubdomain=ci">Dr. Franklin Kouassi</a>.
                   </p>
                   <p>
                     Among other things, I am particularly interested in AI Policy, especially in the African context. 
@@ -62,7 +62,8 @@
                   <p style="text-align:center">
                     <a target="_blank" href="mailto:cmanouan@alumni.cmu.edu"> Email</a> &nbsp;/&nbsp;
                     <a href="https://github.com/dric2018">GitHub</a> &nbsp;/&nbsp;
-                    <a href="https://drive.google.com/file/d/1Wp5_aFiaC2J2yclBLADAX7VSoYCGuy2c/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+                    <a href="https://drive.google.com/file/d/1Wp5_aFiaC2J2yclBLADAX7VSoYCGuy2c/view?usp=drive_link">CV Eng.</a> &nbsp;-&nbsp;
+                    <a href="https://drive.google.com/file/d/1lIgFBzDZFbsA_jL2TizThw2dK4cvK9CY/view?usp=drive_link">CV Fr.</a> &nbsp;/&nbsp;
                     <a href="https://twitter.com/cmDrStrange">Twitter</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/cpem"> LinkedIn </a>
                     <!-- <a href="{{ site.baseurl }}/me"> Gallery </a> -->
@@ -91,6 +92,7 @@
                 It's worth noting that both of these ideas expand upon the concept of the Dual-system theory, which was popularized by  Daniel Kahneman in Thinking Fast and Slow (<a href="https://www.youtube.com/watch?v=gmjgZF2HEwI&t=3936s&ab_channel=LongNowFoundation">Talk</a>/<a href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555">Book</a>).<br>
                 My hypothesis in this regard is being complied as part of an ongoing independent research titled <a href="#">Language is Almost All you Need (preprint coming soon)</a>.<br><br>
 
+                I have a particular affinity for subjects related to <a href="https://www.africa.engineering.cmu.edu/academics/courses/04-800-AD.html">Leading and Managing Technological Innovation</a>. My enthusiasm for this area intensified following my enrollment in a course of the same name, instructed by <a href="https://www.africa.engineering.cmu.edu/about/contact/directory/bios/kryder-mark.html">Prof. Mark Kryder</a>.
                 In the context of African AI policy, I am keenly interested in examining the performance of our countries across five (5) key axes:
                 <ol>
                   <li>Algorithms (ML/DL) </li>
