--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,8 +63,8 @@
                   <p style="text-align:center">
                     <a target="_blank" href="mailto:cmanouan@alumni.cmu.edu" target="_blank"> Email</a> &nbsp;/&nbsp;
                     <a href="https://github.com/dric2018" target="_blank">GitHub</a> &nbsp;/&nbsp;
-                    <a href="https://drive.google.com/file/d/1Wp5_aFiaC2J2yclBLADAX7VSoYCGuy2c/view?usp=drive_link" target="_blank">CV Eng.</a> &nbsp;-&nbsp;
-                    <a href="https://drive.google.com/file/d/1lIgFBzDZFbsA_jL2TizThw2dK4cvK9CY/view?usp=drive_link" target="_blank">CV Fr.</a> &nbsp;/&nbsp;
+                    <a href="https://drive.google.com/file/d/1WxSyXlYGnP2diUPwIvP91J9zpty4JfpJ/view?usp=drive_link" target="_blank">CV.</a> &nbsp;-&nbsp;
+                    <!-- <a href="https://drive.google.com/file/d/1lIgFBzDZFbsA_jL2TizThw2dK4cvK9CY/view?usp=drive_link" target="_blank">CV Fr.</a> &nbsp;/&nbsp; -->
                     <a href="https://twitter.com/cmDrStrange" target="_blank">Twitter</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/cpem" target="_blank"> LinkedIn </a>
                     <!-- <a href="{{ site.baseurl }}/me"> Gallery </a> -->
