updated intro section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
                   <hr>
     
                   <p>
-                    Hello from the other side! I am a Deep Learning Engineer who loves building Neural Networks of all kinds.&#129303;                <br>
+                    Hello from the other side! I am an AI Specialist and Deep Learning Engineer who loves building neural networks of all kinds...among other things&#129303;                <br>
                     I previously served as a Research Assisociate within the AI &amp; Robotics Lab at <a href="https://www.africa.engineering.cmu.edu/" target="_blank">Carnegie Mellon University Africa</a>, which is affiliated with the <a href="https://engineering.cmu.edu/" target="_blank">College of Engineering</a> at <a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.
                     Under the supervision of Prof. <a href="http://vernon.eu/personal.htm" target="_blank">David Vernon</a>, I was engaged in research focused on the practical applications of Natural Language Processing within the field of cognitive robotics.
                   </p>
@@ -63,7 +63,7 @@
                   <p style="text-align:center">
                     <a target="_blank" href="mailto:cmanouan@alumni.cmu.edu" target="_blank"> Email</a> &nbsp;/&nbsp;
                     <a href="https://github.com/dric2018" target="_blank">GitHub</a> &nbsp;/&nbsp;
-                    <a href="https://drive.google.com/file/d/1WxSyXlYGnP2diUPwIvP91J9zpty4JfpJ/view?usp=drive_link" target="_blank">CV.</a> &nbsp;-&nbsp;
+                    <a href="https://drive.google.com/file/d/1WxSyXlYGnP2diUPwIvP91J9zpty4JfpJ/view?usp=drive_link" target="_blank">CV</a> &nbsp;/&nbsp;
                     <!-- <a href="https://drive.google.com/file/d/1lIgFBzDZFbsA_jL2TizThw2dK4cvK9CY/view?usp=drive_link" target="_blank">CV Fr.</a> &nbsp;/&nbsp; -->
                     <a href="https://twitter.com/cmDrStrange" target="_blank">Twitter</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/cpem" target="_blank"> LinkedIn </a>
