added blog posts

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -97,7 +97,7 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'work' %}
                   {% include resume/work.liquid %}
-                {% when 'volunteer' %}
+                {% when 'volunteering' %}
                   {% include resume/volunteer.liquid %}
                 {% when 'projects' %}
                   {% include resume/projects.liquid %}
