--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -79,6 +79,14 @@ layout: default
       {% include news.liquid limit=true %}
     {% endif %}
 
+        <!-- Latest posts -->
+    {% if page.latest_posts and page.latest_posts.enabled %}
+      <h2>
+        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
+      </h2>
+      {% include latest_posts.liquid %}
+    {% endif %}
+
     <!-- Social -->
     {% if page.social %}
       <div class="social">
